feat: Added analytics

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,16 @@
   <meta name="twitter:title" content="Mini SEO" >
   <meta name="twitter:description" content="Simple SEO you can quickly add to your website!" >
   <meta name="twitter:image" content="https://mini-seo.vercel.app/assets/images/promo.png" >
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DWM4Q56EWX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-DWM4Q56EWX');
+  </script>
 </head>
 <body>
   <app-root></app-root>
